[DOC] Test framework physical separation with NodeSelector

--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -199,11 +199,9 @@ This section describes the implementation of the test framework and presents the
 
 Before going into the details of each subsystem in the framework, the environment of the test framework should be specified. The question is, where to run the framework? Should it be deployed next to the system under test to minimize communication overhead or should it run independently from the application?
 
-Operating the test framework in the same environment as the tested application seems obvious at first, however this would bring in several issues that should be taken into account. Deploying the the framework and the system under the test would create a tightly coupled structure, whereas in distributed systems, loosely-coupled units are preferred. Co-deployment would also lead to the possibility that operating the framework could have a performance impact on the tested application itself, causing altered measurement results. Any infrastructural error (for example physical machine crash) -- either provoked by transient failures or inserted by the fault injector -- would affect both the application under test (which is accepted and should be handled by the application) and the framework itself. This is not passable as it would lead to framework malfunctions.
+Operating the test framework in the same environment as the tested application seems obvious at first, however this would bring in several issues that should be taken into account. Deploying the framework and the system under test would create a tightly coupled structure, whereas in distributed systems, loosely-coupled units are preferred. Co-deployment would also lead to the possibility that operating the framework could have a performance impact on the tested application itself, causing altered measurement results. Any infrastructural error (for example physical machine crash) -- either provoked by transient failures or inserted by the fault injector -- would affect both the application under test (which is accepted and should be handled by the application) and the framework itself. This is not passable as it would lead to framework malfunctions.
 
-The conclusion is to deploy the test framework and the application to evaluate separately. As it is practical for some of the tools used in the framework to run in the same Kubernetes cluster as the application, separation is implemented with exploiting the namespacing capabilities of Kubernetes.
-
-TODO physical separation can be achieved with NodeSelectors and Affinity / Antiaffinity.
+The conclusion is to deploy the test framework and the application to be evaluated separately. As it is practical for some of the tools used in the framework to run in the same Kubernetes cluster as the application, separation is implemented with exploiting two Kubernetes features. First, the framework is logically separated from the application by deploying them into different namespaces. Additionally, the two parts are physically separated as well using NodeSelectors in the Pod definitions of the components (for further information on NodeSelectors, see \cite{KubernetesNodeSelector}). This will ensure, that if a node that runs application workload is injected with machine failures, it will not have an effect on the test framework.
 
 %----------------------------------------------------------------------------
 \subsection{Measurement Proxy}
