[DOC] Document measurement proxy

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -295,3 +295,9 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://findstack.com/cloud-computing-statistics/} (accessed at 12/04/2022)},
 	title        = {{T}he {U}ltimate {L}ist of {C}loud {C}omputing {S}tatistics 2022},
 }
+
+@misc{KubernetesPortforward,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/} (accessed at 17/04/2022)},
+	title        = {{U}se {P}ort {F}orwarding to {A}ccess {A}pplications in a {C}luster},
+}
