--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -301,3 +301,21 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/} (accessed at 17/04/2022)},
 	title        = {{U}se {P}ort {F}orwarding to {A}ccess {A}pplications in a {C}luster},
 }
+
+@misc{AWSWhatIs,
+	author       = {{Amazon Web Services}},
+	howpublished = {\url{https://aws.amazon.com/what-is-aws/} (accessed at 18/04/2022)},
+	title        = {{W}hat is {A}{W}{S}},
+}
+
+@misc{AWSCloudFormationExample,
+	author       = {{Amazon Web Services}},
+	howpublished = {\url{https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/gettingstarted.templatebasics.html} (accessed at 18/04/2022)},
+	title        = {{L}earn template basics - {A}{W}{S} {C}loud{F}ormation},
+}
+
+@misc{AWSEKS,
+	author       = {{Amazon Web Services}},
+	howpublished = {\url{https://aws.amazon.com/eks/} (accessed at 18/04/2022)},
+	title        = {{A}mazon {E}lastic {K}ubernetes {S}ervice},
+}
