[DOC] Monitoring partly

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -319,3 +319,39 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://aws.amazon.com/eks/} (accessed at 18/04/2022)},
 	title        = {{A}mazon {E}lastic {K}ubernetes {S}ervice},
 }
+
+@misc{TimeSeriesInflux,
+	author       = {{InfluxData}},
+	howpublished = {\url{https://www.influxdata.com/time-series-database/} (accessed at 18/04/2022)},
+	title        = {{T}ime series database ({T}{S}{D}{B}) explained},
+}
+
+@misc{Prometheus,
+	author       = {{Prometheus Authors}},
+	howpublished = {\url{https://prometheus.io/docs/introduction/overview/} (accessed at 18/04/2022)},
+	title        = {{P}rometheus {O}verview},
+}
+
+@misc{PrometheusQueryingBasics,
+	author       = {{Prometheus Authors}},
+	howpublished = {\url{https://prometheus.io/docs/prometheus/latest/querying/basics/} (accessed at 18/04/2022)},
+	title        = {{P}rometheus {Q}uerying basics},
+}
+
+@misc{PrometheusQueryingOperators,
+	author       = {{Prometheus Authors}},
+	howpublished = {\url{https://prometheus.io/docs/prometheus/latest/querying/operators/} (accessed at 18/04/2022)},
+	title        = {{P}rometheus {Q}uerying operators},
+}
+
+@misc{PrometheusQueryingFunctions,
+	author       = {{Prometheus Authors}},
+	howpublished = {\url{https://prometheus.io/docs/prometheus/latest/querying/functions/} (accessed at 18/04/2022)},
+	title        = {{P}rometheus {Q}uery functions},
+}
+
+@misc{PrometheusBlackboxExporter,
+	author       = {{Prometheus}},
+	howpublished = {\url{https://github.com/prometheus/blackbox_exporter} (accessed at 18/04/2022)},
+	title        = {{B}lackbox exporter},
+}
